<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="370dp"
    android:layout_height="550dp">

    <TextView
        android:id="@+id/dialogTitle"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="16dp"
        android:paddingTop="10dp"
        android:paddingLeft="-10dp"
        android:paddingBottom="20dp"
        android:text="@string/dialogTitle"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textAlignment="center"
        android:background="@color/blue"/>

    <TextView
        android:id="@+id/authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/authors"
        android:textSize="25dp"
        android:paddingLeft="16dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/gavan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/gavan"
        android:textSize="20dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/nahor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/nahor"
        android:textSize="20dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/nausher"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/nausher"
        android:textSize="20dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:id="@+id/ryan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/ryan"
        android:textSize="20dp"
        android:paddingLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="15dp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif"
        android:text="@string/actvitiyVersion"
        android:textSize="18dp"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="20dp"/>

    <Button
        android:id="@+id/quitAppInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/dialogContinue"
        android:textColor="@color/black"
        android:paddingLeft="16dp"
        android:background="@color/teal_200"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="135dp"/>
</LinearLayout>