<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/helpLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/helpImage"
        android:layout_width="232dp"
        android:layout_height="183dp"
        app:srcCompat="@drawable/logo_trans" />

    <TextView
        android:id="@+id/helpText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:paddingStart="20dp"
        android:paddingEnd="10dp"
        android:text="@string/localifyGoal" />

    <TextView
        android:id="@+id/helpText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="20dp"
        android:paddingTop="5dp"
        android:paddingEnd="10dp"
        android:paddingBottom="50dp"
        android:text="@string/localifyGoal2" />

    <Button
        android:id="@+id/appInfoButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="50dp"
        android:background="@color/teal_200"
        android:paddingHorizontal="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/dialogButton"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/instructionsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:background="@color/teal_200"
        android:paddingHorizontal="40dp"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:text="@string/instructions"
        android:textColor="@color/black" />


</LinearLayout>
